Added filtering feature.

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,8 +8,8 @@
   --primary-700: #1976d2;
   --secondary-6: #448aff;
   --white: #fff;
-  --danger: #e96980;
-  --success: #7cc360;
+  --danger-400: #e96980;
+  --danger-100: #f8d7da;
   --text-primary: #2962ff;
   --text-secondary: #448aff;
 }
