--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,5 @@
 .app {
-  text-align: center;
-}
-
-.example {
-  max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
 }
