--- a/src/components/autocomplete/select/Select.module.scss
+++ b/src/components/autocomplete/select/Select.module.scss
@@ -1,7 +1,3 @@
-.htmlSelect {
-  display: none;
-}
-
 .outerWrapper {
   position: relative;
   user-select: none;
@@ -17,14 +13,14 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  --border-color: var(--primary-300);
+  --border-color: var(--primary-400);
   outline: 0;
 
   &:enabled {
     &:hover,
     &:focus {
       margin: 0;
-      border: solid 0.2rem var(--primary-300);
+      border: solid 0.2rem var(--primary-400);
     }
   }
 
@@ -32,8 +28,13 @@
     cursor: pointer;
   }
 
+  &:disabled {
+    cursor: default;
+    opacity: 0.5;
+  }
+
   &::-webkit-input-placeholder {
-    color: var(--primary-300);
+    color: var(--primary-400);
   }
 
   display: block;
@@ -44,7 +45,7 @@
   padding: 0.8rem 4rem 0.8rem 0.8rem;
   margin: 0.1rem;
   line-height: 2rem;
-  color: var(--primary-600);
+  color: var(--primary-700);
   cursor: text;
 }
 
@@ -58,7 +59,7 @@
   position: absolute;
   width: 2rem;
   height: 2rem;
-  fill: var(--primary-400);
+  fill: var(--primary-500);
   top: 50%;
   margin-top: calc(2rem / -2);
   right: 0.8rem;
@@ -70,6 +71,7 @@
 
   &.disabled {
     cursor: default;
+    opacity: 0.5;
   }
 }
 
@@ -81,7 +83,7 @@
   padding: 0;
   margin-top: 0.8rem;
   background: var(--white);
-  border: 0.1rem solid var(--primary-600);
+  border: 0.1rem solid var(--primary-700);
   border-radius: 0.5rem;
   overflow: hidden;
 
@@ -98,7 +100,7 @@
   padding: 0;
   font-size: 1.6rem;
   line-height: 2rem;
-  color: var(--primary-600);
+  color: var(--primary-700);
 
   @media (min-width: 768px) {
     max-height: 36rem;
@@ -106,7 +108,7 @@
 }
 
 .noOptions {
-  color: var(--primary-400);
+  color: var(--primary-500);
   padding: 1.6rem 2.4rem;
   cursor: default;
 }
@@ -126,14 +128,14 @@
   }
 
   &:hover {
-    background: var(--primary-100);
+    background: var(--primary-200);
   }
 
   &.isSelected {
-    background: var(--primary-200);
+    background: var(--primary-300);
   }
 }
 
 .placeholder {
-  color: var(--primary-300);
+  color: var(--primary-400);
 }
