--- a/src/components/autocomplete/Autocomplete.module.scss
+++ b/src/components/autocomplete/Autocomplete.module.scss
@@ -1,7 +1,9 @@
 .container {
   width: 100%;
   max-width: 600px;
-  margin-top: 50px;
+  margin-top: 5rem;
+  padding: 0 1rem;
+  box-sizing: border-box;
 }
 
 .loading {
